Lots of fixes
Added new other photos
Fix issue with gallery icons appearing different sizes/misaligned
Update how the "active" menu item functions
Updated Contacts and About pages
New images for cover page
Python script to automatically write code for galleries basd on a folder

--- a/css/CoverStyle.css
+++ b/css/CoverStyle.css
@@ -119,3 +119,11 @@ body{
 	-o-background-size: cover;
 	background-size: cover;
 }
+
+.slide:nth-of-type(7) {
+    background: url("../img/cover/Cover7.jpg") no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
