--- a/css/MainStyle.css
+++ b/css/MainStyle.css
@@ -33,6 +33,7 @@ html{background-color: black;}
 	cursor: pointer;
 	width: 100px;
 	padding: 10px;
+	padding-right: 50px;
 }
 .menu {
 	max-width: 100%;
@@ -45,7 +46,8 @@ html{background-color: black;}
 	font-size: calc(.5em + 2vm);
 	font-weight: 200;
 	letter-spacing: 1px;
-	padding: 15px;
+	padding: 30px;
+	padding-bottom: 10px;
 	display: none;
 }
 .bar1, .bar2, .bar3 {
@@ -104,7 +106,7 @@ html{background-color: black;}
 .GalleryList{
 	display: flex;
 	flex-wrap: wrap;
-	align-items: center;
+	align-items: top;
 	align-content:space-around;
 	justify-content: center;
 	margin-left: 100px;
@@ -182,24 +184,27 @@ html{background-color: black;}
 	padding-top: 70px;
 }
 
+
+
 /*CONTACT PAGE*/
 .info h1{
 	position: absolute;
 	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", sans-serif;
 	font-style: oblique;
 	font-size: calc(.5em + 2vm);
-	padding-right: 200px;
-	padding-left: 200px;
-	padding-bottom: 150px;
+	padding-right: 50px;
+	padding-left: 50px;
+	padding-bottom: 20px;
 }
 .info p{
 	position: absolute;
 	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", sans-serif;
 	font-style: oblique;
 	font-size: calc(.5em + 2vm);
-	padding-right: 200px;
-	padding-left: 200px;
+	padding-right: 50px;
+	padding-left: 50px;
 	padding-bottom: 150px;
+	padding-top: 70px;
 }
 
 /*mobile formatting*/
